// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

<body>
    <div>
      <table
        class="c0"
        data-tui-name="Table"
      >
        <thead
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <th
              class="c2"
              data-tui-name="Th"
            >
              <div>
                Col 1
              </div>
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
            <th
              class="c2"
              data-tui-name="Th"
            >
              Col 2
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <td
              class="c4"
              data-tui-name="Td"
            >
              <div>
                Val 1
              </div>
            </td>
            <td
              class="c4"
              data-tui-name="Td"
            >
              Val 2
            </td>
          </tr>
        </tbody>
        <tfoot
          class=""
        />
      </table>
    </div>
  </body>,
  "container": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

<div>
    <table
      class="c0"
      data-tui-name="Table"
    >
      <thead
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <th
            class="c2"
            data-tui-name="Th"
          >
            <div>
              Col 1
            </div>
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
          <th
            class="c2"
            data-tui-name="Th"
          >
            Col 2
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <td
            class="c4"
            data-tui-name="Td"
          >
            <div>
              Val 1
            </div>
          </td>
          <td
            class="c4"
            data-tui-name="Td"
          >
            Val 2
          </td>
        </tr>
      </tbody>
      <tfoot
        class=""
      />
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Caption 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

.c5 {
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.03333em;
  -moz-letter-spacing: 0.03333em;
  -ms-letter-spacing: 0.03333em;
  letter-spacing: 0.03333em;
  line-height: 1.66;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
  width: auto;
  text-align: center;
  padding: 1rem 2rem;
}

<body>
    <div>
      <table
        class="c0"
        data-tui-name="Table"
      >
        <thead
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <th
              class="c2"
              data-tui-name="Th"
            >
              <div>
                Col 1
              </div>
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
            <th
              class="c2"
              data-tui-name="Th"
            >
              Col 2
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <td
              class="c4"
              data-tui-name="Td"
            >
              <div>
                Val 1
              </div>
            </td>
            <td
              class="c4"
              data-tui-name="Td"
            >
              Val 2
            </td>
          </tr>
        </tbody>
        <tfoot
          class=""
        />
      </table>
      <div
        class="c5"
        data-tui-name="TableCaption"
      >
        sample caption
      </div>
    </div>
  </body>,
  "container": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

.c5 {
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.03333em;
  -moz-letter-spacing: 0.03333em;
  -ms-letter-spacing: 0.03333em;
  letter-spacing: 0.03333em;
  line-height: 1.66;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
  width: auto;
  text-align: center;
  padding: 1rem 2rem;
}

<div>
    <table
      class="c0"
      data-tui-name="Table"
    >
      <thead
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <th
            class="c2"
            data-tui-name="Th"
          >
            <div>
              Col 1
            </div>
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
          <th
            class="c2"
            data-tui-name="Th"
          >
            Col 2
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <td
            class="c4"
            data-tui-name="Td"
          >
            <div>
              Val 1
            </div>
          </td>
          <td
            class="c4"
            data-tui-name="Td"
          >
            Val 2
          </td>
        </tr>
      </tbody>
      <tfoot
        class=""
      />
    </table>
    <div
      class="c5"
      data-tui-name="TableCaption"
    >
      sample caption
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Dark mode basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(215,25%,27%,0.5);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

<body>
    <div>
      <table
        class="c0"
        data-tui-name="Table"
      >
        <thead
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <th
              class="c2"
              data-tui-name="Th"
            >
              <div>
                Col 1
              </div>
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
            <th
              class="c2"
              data-tui-name="Th"
            >
              Col 2
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <td
              class="c4"
              data-tui-name="Td"
            >
              <div>
                Val 1
              </div>
            </td>
            <td
              class="c4"
              data-tui-name="Td"
            >
              Val 2
            </td>
          </tr>
        </tbody>
        <tfoot
          class=""
        />
      </table>
    </div>
  </body>,
  "container": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(215,25%,27%,0.5);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

<div>
    <table
      class="c0"
      data-tui-name="Table"
    >
      <thead
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <th
            class="c2"
            data-tui-name="Th"
          >
            <div>
              Col 1
            </div>
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
          <th
            class="c2"
            data-tui-name="Th"
          >
            Col 2
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <td
            class="c4"
            data-tui-name="Td"
          >
            <div>
              Val 1
            </div>
          </td>
          <td
            class="c4"
            data-tui-name="Td"
          >
            Val 2
          </td>
        </tr>
      </tbody>
      <tfoot
        class=""
      />
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Dark mode striped render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c0 tr:nth-child(even) td {
  background-color: hsla(221,39%,11%,0.4);
}

.c0 tr:nth-child(odd) td {
  background-color: hsla(221,39%,11%,0.7);
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(215,25%,27%,0.5);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

<body>
    <div>
      <table
        class="c0"
        data-tui-name="Table"
      >
        <thead
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <th
              class="c2"
              data-tui-name="Th"
            >
              <div>
                Col 1
              </div>
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
            <th
              class="c2"
              data-tui-name="Th"
            >
              Col 2
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <td
              class="c4"
              data-tui-name="Td"
            >
              <div>
                Val 1
              </div>
            </td>
            <td
              class="c4"
              data-tui-name="Td"
            >
              Val 2
            </td>
          </tr>
        </tbody>
        <tfoot
          class=""
        />
      </table>
    </div>
  </body>,
  "container": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c0 tr:nth-child(even) td {
  background-color: hsla(221,39%,11%,0.4);
}

.c0 tr:nth-child(odd) td {
  background-color: hsla(221,39%,11%,0.7);
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(215,25%,27%,0.5);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

<div>
    <table
      class="c0"
      data-tui-name="Table"
    >
      <thead
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <th
            class="c2"
            data-tui-name="Th"
          >
            <div>
              Col 1
            </div>
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
          <th
            class="c2"
            data-tui-name="Th"
          >
            Col 2
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <td
            class="c4"
            data-tui-name="Td"
          >
            <div>
              Val 1
            </div>
          </td>
          <td
            class="c4"
            data-tui-name="Td"
          >
            Val 2
          </td>
        </tr>
      </tbody>
      <tfoot
        class=""
      />
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Stretched render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  width: 100%;
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

<body>
    <div>
      <table
        class="c0"
        data-tui-name="Table"
      >
        <thead
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <th
              class="c2"
              data-tui-name="Th"
            >
              <div>
                Col 1
              </div>
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
            <th
              class="c2"
              data-tui-name="Th"
            >
              Col 2
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <td
              class="c4"
              data-tui-name="Td"
            >
              <div>
                Val 1
              </div>
            </td>
            <td
              class="c4"
              data-tui-name="Td"
            >
              Val 2
            </td>
          </tr>
        </tbody>
        <tfoot
          class=""
        />
      </table>
    </div>
  </body>,
  "container": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  width: 100%;
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

<div>
    <table
      class="c0"
      data-tui-name="Table"
    >
      <thead
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <th
            class="c2"
            data-tui-name="Th"
          >
            <div>
              Col 1
            </div>
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
          <th
            class="c2"
            data-tui-name="Th"
          >
            Col 2
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <td
            class="c4"
            data-tui-name="Td"
          >
            <div>
              Val 1
            </div>
          </td>
          <td
            class="c4"
            data-tui-name="Td"
          >
            Val 2
          </td>
        </tr>
      </tbody>
      <tfoot
        class=""
      />
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Striped render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c0 tr:nth-child(even) td {
  background-color: hsla(220,14%,96%,0.8);
}

.c0 tr:nth-child(odd) td {
  background-color: hsla(220,13%,91%,0.8);
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

<body>
    <div>
      <table
        class="c0"
        data-tui-name="Table"
      >
        <thead
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <th
              class="c2"
              data-tui-name="Th"
            >
              <div>
                Col 1
              </div>
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
            <th
              class="c2"
              data-tui-name="Th"
            >
              Col 2
              <div
                class="c3"
                data-tui-name="Resizer"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="c1"
            data-tui-name="Tr"
          >
            <td
              class="c4"
              data-tui-name="Td"
            >
              <div>
                Val 1
              </div>
            </td>
            <td
              class="c4"
              data-tui-name="Td"
            >
              Val 2
            </td>
          </tr>
        </tbody>
        <tfoot
          class=""
        />
      </table>
    </div>
  </body>,
  "container": .c0 {
  border: none;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c0 tr:nth-child(even) td {
  background-color: hsla(220,14%,96%,0.8);
}

.c0 tr:nth-child(odd) td {
  background-color: hsla(220,13%,91%,0.8);
}

.c0 td,
.c0 th {
  padding: calc(0.8em * 1) 1em;
}

.c1 {
  border: none;
}

.c1 > :first-child {
  border-left: none;
}

.c1 > :last-child {
  border-right: none;
}

.c2 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c4 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c3:hover,
.c3.resizing {
  background-color: hsla(330,81%,60%,1);
}

<div>
    <table
      class="c0"
      data-tui-name="Table"
    >
      <thead
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <th
            class="c2"
            data-tui-name="Th"
          >
            <div>
              Col 1
            </div>
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
          <th
            class="c2"
            data-tui-name="Th"
          >
            Col 2
            <div
              class="c3"
              data-tui-name="Resizer"
            />
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="c1"
          data-tui-name="Tr"
        >
          <td
            class="c4"
            data-tui-name="Td"
          >
            <div>
              Val 1
            </div>
          </td>
          <td
            class="c4"
            data-tui-name="Td"
          >
            Val 2
          </td>
        </tr>
      </tbody>
      <tfoot
        class=""
      />
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
